--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<!-- Calculator Screen -->
+<!-- Calculator UI -->
 <div id="calculator">
   <div id="display">0</div>
   <div id="buttons">
@@ -38,7 +38,6 @@
   <button class="chatBtn" onclick="sendMsg()">Send</button>
 </div>
 
-<!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 <script src="script.js"></script>
